--- a/todoapp/templates/todoapp/createtask.html
+++ b/todoapp/templates/todoapp/createtask.html
@@ -1,7 +1,7 @@
 {% extends 'todoapp/home.html'%}
 {% block content%}
 	<div class="container">
-		<h3>New post</h3>
+		<h3>New task</h3>
 		<form action="" method="post">
 		{% csrf_token %}
 		{{ form.as_p }}
